@startuml

title __SMARTHOME.APP's Class Diagram__\n

  namespace com.example.smarthome {
    namespace Activity {
      class com.example.smarthome.Activity.LoginActivity {
      }
    }
  }
  

  namespace com.example.smarthome {
    namespace Activity {
      class com.example.smarthome.Activity.MainActivity {
      }
    }
  }
  

  namespace com.example.smarthome {
    namespace Activity {
      class com.example.smarthome.Activity.SignUpActivity {
      }
    }
  }
  

  namespace com.example.smarthome {
    class com.example.smarthome.BuildConfig {
    }
  }
  

  namespace com.example.smarthome {
    namespace Fragment {
      class com.example.smarthome.Fragment.AccountFragment {
      }
    }
  }
  

  namespace com.example.smarthome {
    namespace Fragment {
      class com.example.smarthome.Fragment.ControlFragment {
      }
    }
  }
  

  namespace com.example.smarthome {
    namespace Fragment {
      class com.example.smarthome.Fragment.HomeFragment {
      }
    }
  }
  

  namespace com.example.smarthome {
    namespace Fragment {
      class com.example.smarthome.Fragment.NotificationsFragment {
      }
    }
  }
  

  namespace com.example.smarthome {
    namespace Fragment {
      class com.example.smarthome.Fragment.StatisticsFragment {
      }
    }
  }
  

  namespace com.example.smarthome {
    namespace Utils {
      class com.example.smarthome.Utils.MQTTService {
      }
    }
  }
  

  namespace com.example.smarthome {
    namespace Utils {
      class com.example.smarthome.Utils.NotificationAdapter {
      }
    }
  }
  

  namespace com.example.smarthome {
    namespace Utils {
      class com.example.smarthome.Utils.NotificationItem {
      }
    }
  }
  

  namespace com.example.smarthome {
    namespace Utils {
      class com.example.smarthome.Utils.NotificationService {
      }
    }
  }
  

  namespace com.example.smarthome {
    namespace Utils {
      class com.example.smarthome.Utils.RecordItem {
      }
    }
  }
  

  namespace com.example.smarthome {
    namespace Utils {
      class com.example.smarthome.Utils.Room {
      }
    }
  }
  

  namespace com.example.smarthome {
    namespace Utils {
      interface com.example.smarthome.Utils.RoomListener {
      }
    }
  }
  

  namespace com.example.smarthome {
    namespace Utils {
      class com.example.smarthome.Utils.StateItem {
      }
    }
  }
  

  com.example.smarthome.Activity.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.smarthome.Activity.MainActivity .up.|> com.example.smarthome.Utils.RoomListener
  com.example.smarthome.Activity.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.smarthome.Activity.MainActivity o-- com.example.smarthome.Utils.MQTTService : mqttService
  com.example.smarthome.Activity.MainActivity o-- com.example.smarthome.Utils.NotificationService : notificationService
  com.example.smarthome.Activity.SignUpActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.smarthome.Fragment.AccountFragment -up-|> androidx.fragment.app.Fragment
  com.example.smarthome.Fragment.ControlFragment -up-|> androidx.fragment.app.Fragment
  com.example.smarthome.Fragment.ControlFragment o-- com.example.smarthome.Utils.RoomListener : roomListener
  com.example.smarthome.Fragment.HomeFragment -up-|> androidx.fragment.app.Fragment
  com.example.smarthome.Fragment.NotificationsFragment -up-|> androidx.fragment.app.Fragment
  com.example.smarthome.Fragment.NotificationsFragment o-- com.example.smarthome.Utils.NotificationAdapter : adapter
  com.example.smarthome.Fragment.StatisticsFragment -up-|> androidx.fragment.app.Fragment
  com.example.smarthome.Utils.NotificationAdapter -up-|> com.firebase.ui.firestore.FirestoreRecyclerAdapter
  com.example.smarthome.Utils.Room o-- com.example.smarthome.Utils.Room.RoomType : type


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
